# immigration_enforcement

./: .gitignore  DEVELOPER.md  Makefile  README.md  about.md  backend.py  data.md  detentions.py  footnotes.py  pyproject.toml  scratch.ipynb  streamlit_app.py  type_defs.py
.github/workflows/: lint.yml
.streamlit/: config.toml
borderpatrol/: sbo-encounters-fy22-fy25-aug.csv
cbp/: 1-monthly-encounters.ipynb  2-add-administration-markers.ipynb  3-combine-data.ipynb  3-combine-datasets.ipynb  KHSM Encounters (USBP) fy25m11.xlsx  add_administration_markers.ipynb  cbp_functions.py  encounters-module-documentation.ipynb  encounters.py  monthly-encounters.ipynb
immigration_enforcement/: backend.py  detentions.py  streamlit_app.py
immigration_enforcement/borderpatrol/: encounters.py
immigration_enforcement/text/: about.md  footnotes.py
notebooks/: detentions-module.ipynb  encounters-module-documentation.ipynb  test.ipynb
tests/: test_backend.py  test_detentions.py  test_encounters.py  test_footnotes.py  test_notebooks.py
text/: about.md  data.md  footnotes.py
