[project]
name = "immigration-enforcement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.1.0",
    "flake8>=7.3.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "ruff>=0.12.1",
    "streamlit>=1.46.1",
]
