[project]
name = "immigration-enforcement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kaleido>=1.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
    "types-requests>=2.32.4.20250913",
]
